syntax = "proto3";

import "google/protobuf/empty.proto";
import "internal/model/ImageDataResponse.proto";
option java_package = "ru.d3fix4m.camera_service";
option java_multiple_files = true;

service CameraService{
  rpc getCameraImage (google.protobuf.Empty) returns (stream ImageDataResponse){}
}
