syntax = "proto3";

import "internal/model/TelemetryData.proto";
option java_package = "ru.d3fix4m.camera_service";
option java_multiple_files = true;

message ImageDataResponse{
  bytes image = 1;
  TelemetryData telemetry = 2;
}